samples/_failures_safe/1761130445_b67d82_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1dab5999.c: In function ‘main’:
./samples/SAFE/__tmp_1dab5999.c:160:12: error: missing terminating " character
  160 |     printf("Tokens found
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_1dab5999.c:160:5: error: expected expression at end of input
  160 |     printf("Tokens found
      |     ^~~~~~
./samples/SAFE/__tmp_1dab5999.c:160:5: error: expected declaration or statement at end of input
